<resources>
    <string name="hello">Hello world,Test!</string>
    <string name="app_name">Travel Smart</string>
    <string name="helloButton">Confirm</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="agree_button">Agree</string>
    <string name="disagree_button">disagree</string>
    <string name="song_button">Song Button</string>
    <string name="wen_button">Wen Button</string>
    <string name="shiqing_button">Shi Button</string>
    <string name="guanwei_button">Guan Button</string>
    <string name="lln_button">lln Button</string>
    <string name="cao_button">Cao Button</string>
    <string name="SplashImageDesc">SplashPic</string>
    <string name="basedata_uploading">BaseData Updating:</string>
    <string name="default_pro">0%</string>
    <string name="network_wifi_connected">Wi-Fi is available</string>
    <string name="network_mobile_connected">mobile is available</string>
    <string name="network_disconnected">network is unavailable</string>
    <string name="InterfaceAccessError">interface access error</string>
    <string name="DBCreateError">database create error</string>
    <string name="BaseDataUpdateFinished">basedata update Finished</string>
    <string name="updateSysVersionDialogTitle">upgrade version</string>
    <string name="updateSysVersionDialogPositiveButton">upgrade</string>
    <string name="updateSysVersionDialogNegativeButton">cancel</string>
    <string name="updateSysVersionDialogAbsoluteMsg">version too low,must upgrade!</string>
    <string name="updateSysVersionDialogOpotionMsg">new version,please upgrade!</string>
    <string name="noNewVersion">no new version!</string>
    <string name="synTempFinish">synchronous template finished</string>
    <string name="synTempError">synchronous template error</string>
    <string name="cleanDataFinish">data clean  finished</string>
    <string name="cleanDataError">data clean error</string>
    <string name="requestNetTimeout">request network timeout,please check!</string>
    <string name="requestNetError">request network error!</string>
    <string name="SysVersionTooLow">current system version too low to send manuscript,please upgrade first!</string>
    <string name="SysVersionLatest">latest version:</string>
    <string name="SysVersionUpgradeNow">,please upgrade soon!</string>
    <string name="network_disconnectedToSend">current network disconnected to send！\n</string>
    <string name="noMoreUpdate">no need to update</string>
    <string name="updating">updating</string>
    <string name="updateFinished">update finished</string>
    <string name="logining">logining</string>
    <string name="defaultContentDesc"></string>
    <string name="textViewNewManuscript_Main">New</string>
    <string name="textViewEditinglist_Main">Editing</string>
    <string name="textViewStandtomanuscript_Main">Standto</string>
    <string name="textViewSendinglist_Main">Sent</string>
    <string name="textViewDeletelist_Main">Elimination</string>
    <string name="textViewSystemconfig_Main">Settings</string>
    <string name="textViewMessage_Main">Msg</string>
    <string name="textViewMore_Main">More</string>
    <string name="exitSysDialogMsg_Main">Exit system?</string>
    <string name="exitSysDialogTitle_Main">Alert</string>
    <string name="checkTemplate_Main">Content null,please complete template\n</string>
    <string name="loginBtnText">Login</string>
    <string name="userNameTViewText">UserName:</string>
    <string name="passwordTViewText">Password:</string>
    <string name="setting">setting</string>
    <string name="userNameETextHint">username please!</string>
    <string name="passwordETextHint">password please!</string>
    <string name="menu_serverSet">server set</string>
    <string name="menu_deviceid">Device ID</string>
    <string name="menu_versionid">version ID</string>
    <string name="SetCurrentServer_Login">SetCurrentServer:</string>
    <string name="menu_optionSet">Set option</string>
    <string name="loginAlertDialogTitle_Login">Login alert</string>
    <string name="loginAlertDialogMsg_Login">username or password can not be null</string>
    <string name="loginFailure_Login">system exception</string>
    <string name="menu_optionSetTitle">option setting</string>
    <string name="sessionTimeout">Your session tomeout,login again!\n </string>
    <string name="noRightToSend">sorry,you have no right to send!\n </string>
    <string name="noRightToSendByAddress">sorry,your address is wrong,please confirm!\n </string>
    <string name="failedToGetUser">failed to get user information! </string>
    <string name="loginAlert">Alert</string>
    <string name="usernameOrPassError">username or password is error </string>
    <string name="offlineLoginSucceed"> Offline login successfully</string>
    <string name="firstLoginMustHasNet">first login need network</string>
    <string name="textViewWordFlash_Main">Word Flash</string>
    <string name="textViewPictureFaster_Main">Picture Flash</string>
    <string name="textViewVoiceFaster_Main">Voice Flash</string>
    <string name="textViewVideoFaster_Main">Video Flash</string>
    <string name="filepath_textview">File Path</string>
    <string name="choose_button">Choose File</string>
    <string name="upload_button">Upload File</string>
    <string name="reslt_textview">Result</string>
    <string name="login_button">Login</string>
    <string name="getuserinfo_button">GetUserInfo</string>
    <string name="pause_button">Pause</string>
    <string name="sessionid_textview">SessionId</string>
    <string name="xml_update_button">XMLUpdate</string>
    <string name="download_button">Download File</string>
    <string name="menu_logout">Logout</string>
    <string name="textViewTitle_MCA">Message Center</string>
    <string name="systemMsg_MCA">System Message</string>
    <string name="recommendMsg_MCA">Recommend Message</string>
    <string name="instantMsg_MCA">Instant Message</string>
    <string name="XMPPMsg_MCA">Xmpp Message</string>
    <string name="sentMsg_MCA">Sent Message</string>
    <string name="messageFrom_MCA">From</string>
    <string name="messageTo_MCA">To</string>
    <string name="btnReplyTitle_MCA">Reply</string>
    <string name="btnDelTitle_MCA">Delete</string>
    <string name="details_nonews">no new msg！</string>
    <string name="btnReplyAgainTitle_MCA">Reply again</string>
    <string name="btnRefreshTitle_MCA">Refresh</string>
    <string name="msgUpdateFinished_MCA">update finished!</string>
    <string name="msgUpdateFailed_MCA">update failed！</string>
    <string name="btnDelOrNotTitle_MCA">Delete or not?</string>
    <string name="inputReplyContent_MCA">Input reply content！</string>
    <string name="replySucceed_MCA"> reply succeed!</string>
    <string name="replyFailed_MCA"> reply failed!</string>
    <string name="replyFailedAsNetProblem_MCA">current network unvailable,reply failed!</string>
    <string name="delFriend">delete friend:</string>
    <string name="textViewTitle_More">More</string>
    <string name="title_Login">eNews 博  众  采  集</string>
    <string name="userName_Login">UserName：</string>
    <string name="password_Login">Password：</string>
    <string name="accessory_delete_alert_title">Notice</string>
    <string name="accessory_delete_alert_content">Please confirm that you want to delete this item!</string>
    <string name="manuTitle_textview">Title:</string>
    <string name="manuTitle_hint">Please input manuscript title</string>
    <string name="manuContent_textview">Content:</string>
    <string name="manuContent_hint">Please input manuscript content</string>
    <string name="manuTitleNotNull">title can not be null!</string>
    <string name="validateFinished">validate finished,already go into Standto list!</string>
    <string name="manu_autosaved">manuscript auto to save</string>
    <string name="manu_standtosend">manuscript already go into Standto list</string>
    <string name="manu_successtosend">Succeed to send!</string>
    <string name="manu_failtosend">failed to send！</string>
    <string name="manuAlreadySaved">manuscript already saved</string>
    <string name="manuSuccessToSave">Succeed to save!</string>
    <string name="manuNotSaved">Not to save!</string>
    <string name="manuSavedError">failed to save!</string>
    <string name="canNotGetLocation">can not get location</string>
    <string name="filePathError">file path error！</string>
    <string name="manuMustHaveAcc">such flash must have accessories!</string>
    <string name="stillBuilding">building...</string>
    <string name="saveAsSuccess">saveAs success</string>
    <string name="saveAsTemplateName">template name</string>
    <string name="templateNameNotNull">template name can not be null!</string>
    <string name="templateNameExist">template name exists,please input another name!</string>
    <string name="templateAddSucceed">Add succeed！</string>
    <string name="failedToSendValidateAgain">failed to send,please validate manuscript again</string>
    <string name="succeedToSendManu">manuscripts send successfully</string>
    <string name="failedToSendManusValidateAgain">manuscripts failed to send,please validate manuscript again</string>
    <string name="addressError">address error！</string>
    <string name="title_EWordFM">Word Flash</string>
    <string name="manuContent_delete_alert_title">Notice</string>
    <string name="manuContent_delete_alert_content">Please confirm that you want to delete content that you have wrote</string>
    <string name="title_EPicFM">Picture Flash</string>
    <string name="manuTitle_textview_EPicFM">Title:</string>
    <string name="manuTitle_hint_EPicFM">Please input manuscript title</string>
    <string name="title_EVoiceFM">Voice Flash</string>
    <string name="title_EVideoFM">Video Flash</string>
    <string name="manuscript_operation_edit">edit</string>
    <string name="editButton_true_manuscriptList">edit</string>
    <string name="editButton_pre">prev</string>
    <string name="editButton_next">next</string>
    <string name="manuscripi_operation_nodata">data empty</string>
    <string name="title_EditMA">Editing</string>
    <string name="title_SendTMA">Sent</string>
    <string name="UPScreenTitle">Settings</string>
    <string name="DefaultTemplate">Default Template</string>
    <string name="TemplateChoose">Template Choose</string>
    <string name="TransmissionFilePackSize">Transmission pack size</string>
    <string name="PackSizeChoose">Choose pack size</string>
    <string name="DefaultPackSize">0</string>
    <string name="AutoSaveInterval">Auto save interval</string>
    <string name="AutoSendLocationInterval">Auto send location interval</string>
    <string name="AutoSaveIntervalSet">set auto save interval</string>
    <string name="AutoSendLocationSet">set auto send location interval</string>
    <string name="DefaultAutoSaveInterval">15</string>
    <string name="DefaultAutoSendLocationInterval">15</string>
    <string name="SavePassword">Save password</string>
    <string name="SavePasswordSet">Set save password</string>
    <string name="DefaultSavePassword">1</string>
    <string name="DefaultVersion">Default version</string>
    <string name="DefaultCurrentUser">Current user</string>
    <string name="DefaultCurrentDeviceID">Current deviceID</string>
    <string name="CurrentNetStatus">Current Net Status</string>
    <string name="CurrentLoginType">Current Login Type</string>
    <string name="UpdateBaseData">Update Base Data</string>
    <string name="SynManuTemp">Synchronous Manuscripts Template</string>
    <string name="UpdateSysVersion">System Version Upgrade</string>
    <string name="CleanData">Clean data</string>
    <string name="DefaultCurrentServer">Current server</string>
    <string name="DefaultLoginServer">Login server</string>
    <string name="DefaultLoginServer_dialog_title">Input login server URL</string>
</resources>